feat: conserta swagger
